# CodeCritic

./: .gitignore  CONTRIBUTING.md  LICENSE  Procfile  README.md  app.py  pyproject.toml  requirements.txt  setup.py  streamlit_app_simple.py
.github/workflows/: ci.yml
.streamlit/: config.toml
codecritic/: __init__.py  __main__.py  api.py  cache.py  config.py  core.py  models.py  parser.py  prompts.py
codecritic/ui/: streamlit_app.py
tests/: __init__.py  test_basic.py
