[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codecritic"
version = "0.1.0"
description = "AI-powered code review and analysis tool"
readme = "README.md"
authors = [
    {name = "Rishu Kumar Singh", email = "rishu@example.com"},
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.28.0",
    "anthropic>=0.8.0",
    "openai>=1.1.0",
    "google-generativeai>=0.3.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.4.2",
]

[project.urls]
Homepage = "https://github.com/rishuSingh404/CodeCritic"
Issues = "https://github.com/rishuSingh404/CodeCritic/issues"

[project.scripts]
codecritic = "codecritic.__main__:main"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "B", "I"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
